--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ __pycache__/
 *log_python_srun*
 # C extensions
 *.so
+#cudedebugging/
+cudedebugging2/
+cubedebugging2/
 
 # Distribution / packaging
 .Python
