add script to load h5 and store to pvd

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ mridata_3d/
 braindata*
 outputmask_only/
 testdata_3d/
+registration/
+testdata_2d/
 imageregistration_outputs/
 # Byte-compiled / optimized / DLL files
 __pycache__/
