--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ outputmask_only/
 testdata_3d/
 registration/
 testdata_2d/
+mri2fem-dataset/
+mri2fem/
+data_generation/
+*.tar
+*.tar.gz
+*.tar.gz
 imageregistration_outputs/
 # Byte-compiled / optimized / DLL files
 __pycache__/
