--- a/.gitignore
+++ b/.gitignore
@@ -22,17 +22,20 @@ data_generation/
 *.tar.gz
 *.tar.gz
 imageregistration_outputs/
-# data
-data/freesurfer/ernie/
-data/normalized/
-data/meshes/ernie/
-data/meshes/abby/brain/*
-!data/meshes/abby/brain/abby8.xml
-
-data/freesurfer/abby/*
-!data/freesurfer/abby/mri
-data/freesurfer/abby/mri/*
-!data/freesurfer/abby/mri/reg-ventricles-w-aq.mgz
+# # data
+# data/freesurfer/ernie/
+# data/normalized/
+# data/meshes/ernie/
+# data/meshes/abby/brain/*
+# !data/meshes/abby/brain/abby8.xml
+data2
+# data/*
+# !data/freesurfer
+# data/freesurfer/ernie/*
+# data/freesurfer/abby/*
+# !data/freesurfer/abby/mri
+# data/freesurfer/abby/mri/*
+# !data/freesurfer/abby/mri/reg-ventricles-w-aq.mgz
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
