add affine registered data (required for mesh transform)

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,12 @@ data/normalized/*
 !data/normalized/cropped
 data/normalized/cropped/files.json
 
+!data/normalized/registered
+data/normalized/registered/*
+!data/normalized/registered/abbytoernie.mgz
+!data/normalized/registered/abbytoernie.lta
+
+
 !data/meshes
 # data/meshes/*
 
